Splunk, ElasticSearch, packs

--- a/.env
+++ b/.env
@@ -1,3 +1,17 @@
+
+
+# Splunk version
+SPLUNK_VERSION=8.2.6
+
+# SplunkWeb Http Port
+SPLUNK_HTTP_PORT=8000
+
+# Splunk Admin Port
+SPLUNK_ADMIN_PORT=8089
+
+# Splunk Forwarding Port
+SPLUNK_S2S_PORT=9997
+
 # Elasticsearch version
 ES_VERSION=8.3.3
 
@@ -6,6 +20,9 @@ ES_HOST_PORT=9200
 
 # Kibana version
 KIBANA_VERSION=8.3.3
+
+# Kibana configuration file
+KIBANA_CFG_FILE=kibana_cfg.ndjson
 
 # Kibana host port
 KIBANA_HOST_PORT=5601
@@ -34,5 +51,6 @@ SERVICE_1_PORT=1234
 # Listener port
 LISTENER_PORT=6789
 
-# Nginx version
-NGINX_VERSION=1.19.0
+# Virtual memory settings
+VM_EXPECTED_LIMIT=262144
+
