Use flask instead of nc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   service1:
     container_name: service1
-    build : server
+    build : service
     environment:
       SCOPE_EVENT_METRIC: "false"
       SCOPE_EVENT_HTTP: "true"
@@ -19,17 +19,12 @@ services:
       SCOPE_CRIBL_ENABLE: "false"
       SCOPE_EVENT_DEST: "${APPSCOPE_DEST:-tcp://cribl1:10092}"
       SCOPE_TAG_container_name: "service1"
-    # command: ["python3", "main.py"]
-    # command: ["python3", "main.py", "--port", "${SERVICE_1_PORT:-1234}"]
-    # command: ["/usr/local/bin/ldscope", "--", "python3", "main.py", "--port", "${SERVICE_1_PORT:-1234}"]
+    command: ["/usr/local/bin/ldscope", "--", "python3", "main.py", "--port", "${SERVICE_1_PORT:-1234}"]
     networks:
       - service1
       - web
-    volumes:
-      - ldscopeShared:/usr/local/bin
     depends_on:
       - cribl1
-      - appscope1
 
   client_normal:
     container_name: client_normal
@@ -66,13 +61,6 @@ services:
       - "${CRIBL_HOST_PORT:-9000}:9000"
     networks:
       - service1
-
-  appscope1:
-    container_name: appscope1
-    image: "cribl/scope:${APPSCOPE_VERSION:-1.1.2}"
-    tty: true
-    volumes:
-      - ldscopeShared:/usr/local/bin
 
   graf1:
     image: grafana/grafana:latest
@@ -141,7 +129,6 @@ services:
       - service1
 
 volumes:
-  ldscopeShared:
   elasticsearch-data:
     driver: local
 
