--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ ES_HOST_PORT=9200
 KIBANA_VERSION=8.3.3
 
 # Kibana configuration file
-KIBANA_CFG_FILE=kibana_cfg.ndjson
+KIBANA_CFG_FILE=kibcfg.ndjson
 
 # Kibana host port
 KIBANA_HOST_PORT=5601
